# github-notifier

./: Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs
src/github/: get_notifications.rs  mod.rs
