[package]
name = "github-notifier"
version = "1.0.0"
edition = "2024"
authors = ["whutchinson98"]
description = "A CLI tool to notify github of new commits"
include = ["src/**/*.rs"]
categories = ["command-line-utilities"]
homepage = "https://github.com/whutchinson98/github-notifier"
repository = "https://github.com/whutchinson98/github-notifier"
license = "MIT"
readme = "README.md"
keywords = ["github", "notification", "cli"]

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
